mob menu fix wrap

--- a/css/main.css
+++ b/css/main.css
@@ -452,9 +452,11 @@ body {
   background-color: #ffffff;
   right: 0;
   top: 0;
+  padding-bottom: 48px;
+  padding-right: 40px;
   z-index: 999;
   transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mob-menu-container.is-open {
@@ -558,6 +560,7 @@ body {
 
 .mob-menu-social-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .mob-menu-social-item,
