--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -129,9 +129,11 @@
     background-color: #ffffff;
     right: 0;
     top: 0;
+    padding-bottom: 48px;
+    padding-right: 40px;
     z-index: 999;
     transform: translateX(100%);
-    transition: transform 250ms ease-in-out;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .mob-menu-container.is-open {
@@ -241,6 +243,7 @@ color: #757575;
 
 .mob-menu-social-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .mob-menu-social-item,
